# movie-microcervices-fastapi

./: docker-compose.yml  pyproject.toml
app/: main.py
app/api/: models.py  movies.py
cast-service/: Dockerfile  requirements.txt
cast-service/app/: main.py
cast-service/app/api/: casts.py  db.py  db_manager.py
cast_service/app/: main.py
cast_service/app/api/: casts.py
movie-service/: pyproject.toml  requirements.txt
movie-service/app/: main.py
movie-service/app/api/: db.py  db_manager.py  movies.py  service.py
movie_service/: Dockerfile
movie_service/app/: main.py
movie_service/app/api/: db.py  models.py  movies.py  service.py
